# serializer version: 1
# name: test_bound_print
  '[0, 1]'
# ---
# name: test_constraint_print_equality
  'Constraint(x1 + 2*x2 - 5 == 0)'
# ---
# name: test_constraint_print_greater_equal
  'Constraint(-x1 - x2 - x3 + 1 <= 0)'
# ---
# name: test_constraint_print_less_equal
  'Constraint(x1 + 2*x2 - 10 <= 0)'
# ---
# name: test_function_print_linear
  'Function(2*x1 + 3*x2 + 1)'
# ---
# name: test_function_print_polynomial
  'Function(x1*x2*x3 + x1*x2 + x1)'
# ---
# name: test_function_print_quadratic
  'Function(x1*x2 + 2*x1 + 3*x2 + 4)'
# ---
# name: test_function_print_tiny_nonzero_coefficient
  'Function(0.00000000000000000001*x1)'
# ---
# name: test_instance_print_uses_modeling_labels
  '''
  Instance(sense=maximize, decision_variables=3, active_constraints=3, removed_constraints=0, named_functions=1)
  Objective:
    x[0] + x[1]
  Constraints:
    [10] capacity[0]: x[0] + x[1] - 1 <= 0
  Indicator constraints:
    [20] active: x[0] = 1 -> x[1] - 1 <= 0
  One-hot constraints:
    [30] choose: exactly one of {x[0], x[1]} = 1
  Named functions:
    [5] score: 2*y + 3
  '''
# ---
# name: test_instance_stats_print
  "{'decision_variables': {'total': 3, 'by_kind': {'binary': 2, 'integer': 1, 'continuous': 0, 'semi_integer': 0, 'semi_continuous': 0}, 'by_usage': {'used_in_objective': 2, 'used_in_constraints': 3, 'used': 3, 'fixed': 0, 'dependent': 0, 'irrelevant': 0}}, 'constraints': {'total': 2, 'active': 2, 'removed': 0}}"
# ---
# name: test_linear_print_constant_only
  'Linear(5)'
# ---
# name: test_linear_print_empty
  'Linear(0)'
# ---
# name: test_linear_print_negative_coefficients
  'Linear(-2.5*x1 + 4*x3 - x5 - 3)'
# ---
# name: test_linear_print_simple
  'Linear(2*x1 + 3*x2 + 1.5)'
# ---
# name: test_parametric_instance_print_uses_parameter_labels
  '''
  ParametricInstance(sense=minimize, decision_variables=1, parameters=1, active_constraints=0, removed_constraints=0, named_functions=0)
  Objective:
    x + p[scenario=base]
  '''
# ---
